--- a/ind.html
+++ b/ind.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="sty.css"
 </head>
+
 <body>
-    <img src=”img/Combo.png” alt=”O combo+ é a junção do alura+ e o alura língua”>
+    <img srcimg= "img\i1,png" alt=”O combo+ e a juncao do alura+ ”>
     <a href=”www.alura.com.br” class=”container__botao”>Assine por 12x de R$120,00*</a>
 </body>
 </html>
