--- a/ind.html
+++ b/ind.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="sty.css"
+    
 </head>
+    
 
 <body>
-    <img srcimg= "i1,png" alt=”O combo+ e a juncao do alura+ ”>
+    <img srcimg= " img/i1,png" alt=”O combo+ e a juncao do alura+ ”>
     <a href=”www.alura.com.br” class=”container__botao”>Assine por 12x de R$120,00*</a>
 </body>
 </html>
