--- a/ind.html
+++ b/ind.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang >
+<html lang=" pt">
 <head>
     
-</head>
-    
-
+</head>  
 <body>
-    <img srcimg= " img/i1,png" alt=”O combo+ e a juncao do alura+ ”>
+    <img srcimg= "img/i1.png" alt=”O combo+ e a juncao do alura+ ”>
     <a href=”www.alura.com.br” class=”container__botao”>Assine por 12x de R$120,00*</a>
 </body>
 </html>
