--- a/ind.html
+++ b/ind.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="sty.css"
 </head>
 <body>
+    <div class="oi"
     <img srcimg= "i1,png" alt=”O combo+ e a juncao do alura+ ”>
     <a href=”www.alura.com.br” class=”container__botao”>Assine por 12x de R$120,00*</a>
 </body>
