--- a/ind.html
+++ b/ind.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="oi"
-    <img srcimg= "i1,png" alt=”O combo+ e a juncao do alura+ ”>
+    <img src= "i1,png" alt=”O combo+ e a juncao do alura+ ”>
     <a href=”www.alura.com.br” class=”container__botao”>Assine por 12x de R$120,00*</a>
 </body>
 </html>
