--- a/ind.html
+++ b/ind.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="oi"
-    <img src= "i1,png" alt=”O combo+ e a juncao do alura+ ”>
-    <a href=”www.alura.com.br” class=”container__botao”>Assine por 12x de R$120,00*</a>
+    <img src= https://lh4.googleusercontent.com/proxy/Fji6TyUjaPNyIA87g8F8HljD2nNBSyXId2dMWyhuIFYi2Ju_Sgft6KXkm6M2UL583tf1EZG2U29HWMS-R11n9a8Pkl44mbxhRMFGDBaZGx4YrDMrgdom9FsbOSC1d6mZayd6B87Be1NeRxc alt=”O combo+ e a juncao do alura+ ”>
+    <a href=”” class=”container__botao”>Assine por 12x de R$120,00*</a>
 </body>
 </html>
