--- a/ind.html
+++ b/ind.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="sty.css"
-</head>
-<body>
-    <div class="oi"
-    <img src= https://lh4.googleusercontent.com/proxy/Fji6TyUjaPNyIA87g8F8HljD2nNBSyXId2dMWyhuIFYi2Ju_Sgft6KXkm6M2UL583tf1EZG2U29HWMS-R11n9a8Pkl44mbxhRMFGDBaZGx4YrDMrgdom9FsbOSC1d6mZayd6B87Be1NeRxc alt=”O combo+ e a juncao do alura+ ”>
-    <a href=”” class=”container__botao”>Assine por 12x de R$120,00*</a>
-</body>
-</html>
+.oi{
+    background-color:#0087ff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       padding: 0 24px; 
+}
