--- a/ind.html
+++ b/ind.html
@@ -1,7 +1,22 @@
-.oi{
-    background-color:#0087ff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-       padding: 0 24px; 
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>oi</h1>
+    <main>
+        <input type="text" placeholder="oi">
+        <button>
+            09
+        </button>
+    <footer>
+        oi
+    </footer>
+    </main>
+
+</body>
+</html>
