--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><empregateen class="com"></empregateen></title>
 </head>
 
 <body>
-    <h1>mut</h1>
+    <h1>empregateen</h1>
     <main>
-        <input type="text" placeholder="oi">
+        <input type="text" placeholder="escolha seu emprego ">
         <button>
-            09
+            pesquisar
         </button>
     <footer>
         oi
