--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><empregateen class="com"></empregateen></title>
+    <title>empregateen.com </title>
 </head>
 
 <body>
