--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             pesquisar
         </button>
     <footer>
-        comtato:********
+        contato:********
     </footer>
     </main>
 
