--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <button>
             pesquisar
         </button>
-    
+    <p>1
+        para quem quer um inprego 
+    </p>
     </main>
     <footer>
         contato:********
