--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>empregateen</h1>
     <main>
-        <input type="text" placeholder="escolha seu emprego ">
+        <input type="text" placeholder="escreva onde quer tabalhar ">
         <button>
             pesquisar
         </button>
