--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             pesquisar
         </button>
     <p>
-        para quem quer um inprego 
+        para quem quer um imprego 
     </p>
     </main>
     <footer>
