--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>empregateen</h1>
+ <section class="oi">
+  <img src=" img/i1.png" alt="oi"
+</section>
     <main>
         <input type="text" placeholder="escreva onde quer tabalhar ">
         <button>
