--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>empregateen</h1>
  <section class="oi">
-  <img src=" https://www.reddit.com/r/MonsterHunter/comments/1763s4i/i_thought_there_were_only_14_weapons/#lightbox" alt="oi"
+  <img src=" https://www.reddit.com/r/MonsterHunter/comments/1763s4i/i_thought_there_were_only_14_weapons/#lightbox" alt="oi">
  </section>
     <main>
         <input type="text" placeholder="escreva onde quer tabalhar ">
