--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <img src="mod.jpg" alt="oi">
  </section>
     <main>
-        <p>
+        <section class="o">
         <input type="text" placeholder="escreva onde quer tabalhar ">
-        </p>
+    </section>
         <button>
             pesquisar
         </button>
