--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <img src="mod.jpg" alt="oi">
  </section>
     <main>
-        <section class="o">
-        <input type="text" placeholder="escreva onde quer tabalhar ">
-    </section>
+        <input1 type="text" placeholder="escreva onde quer tabalhar ">
         <button>
             pesquisar
         </button>
