--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <img src="mod.jpg" alt="oi">
  </section>
     <main>
-        <input1 type="text" placeholder="escreva onde quer tabalhar ">
+        <input type="text" placeholder="escreva onde quer tabalhar ">
         <button>
             pesquisar
         </button>
