--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>empregateen</h1>
  <section class="oi">
-    <img src="mog.jpg" alt="oi">
+    <img src="mo.jpg" alt="oi">
+    <img src="mod.jpg" alt="oi">
  </section>
     <main>
         <input type="text" placeholder="escreva onde quer tabalhar ">
@@ -18,7 +19,6 @@
             pesquisar
         </button>
     <p>
-        <img src="mod.jpg" alt="oi">
         para quem quer um emprego 
     </p>
     </main>
