--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>empregateen</h1>
  <section class="oi">
-    <img src="mog.jpg" alt="oi">
+    <img src="mog.jpg" alt="io">
     <img src="mod.jpg" alt="oi">
  </section>
     <main>
