--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>empregateen</h1>
  <section class="oi">
     <img src="mog.jpg" alt="oi">
+ </section>
+ <section class="io">
     <img src="mod.jpg" alt="oi">
  </section>
     <main>
