--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <main>
         <input type="text" placeholder="escreva onde quer tabalhar ">
     <button>
-        pesquisar
+        <a href="https://game.capcom.com/manual/MHW_PC/pt-br/steam">
+            pesquisar
+        </a>
     </button>
     <section class="io">
         <img src="mod.jpg" alt="oi">
