--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
  </section>
     <main>
         <input type="text" placeholder="escreva onde quer tabalhar ">
-    <button>
-        <a href="https://game.capcom.com/manual/MHW_PC/pt-br/steam">
+    <button href="https://game.capcom.com/manual/MHW_PC/pt-br/steam">
+        <a>
             pesquisar
         </a>
     </button>
