--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  </section>
     <main>
         <input type="text" placeholder="escreva onde quer tabalhar ">
-        <a href"https://game.capcom.com/manual/MHW_PC/pt-br/steam"><button class="botao">pesquisar</button></a>
+        <a href="https://game.capcom.com/manual/MHW_PC/pt-br/steam"><button class="botao">pesquisar</button></a>
     </button>
     <section class="io">
         <img src="mod.jpg" alt="oi">
