--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+<link rel="stylesheet" href="io.java">
 <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +14,24 @@
     <img src="mog.jpg" alt="oi">
  </section>
     <main>
+        
         <input type="text" placeholder="escreva onde quer tabalhar ">
         <a href="https://game.capcom.com/manual/MHW_PC/pt-br/steam"><button class="botao">pesquisar</button></a>
     </button>
+    <input class="search-fruits" type="text">
+<ul class="fruits-list">
+  <li>Maçã</li>
+  <li>Banana</li>
+  <li>Pera</li>
+  <li>Uva</li>
+  <li>Mamão</li>
+  <li>Manga</li>
+  <li>Morango</li>
+  <li>Abacaxi</li>
+  <li>Kiwi</li>
+  <li>Caju</li>
+  <li>Framboesa</li>
+</ul>
     <section class="io">
         <img src="mod.jpg" alt="oi">
      </section>
