--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <img src="mog.jpg" alt="oi">
  </section>
     <main>
+        <div id="divBusca">
+            <input type="text" id="txtBusca" placeholder="Buscar..."/>
+            <img src="search3.png" id="btnBusca" alt="Buscar"/>
+          </div>
     <section class="io">
         <img src="mod.jpg" alt="oi">
      </section>
