--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-    <h1>empregateen</h1>
+    <h1>taberna de caça</h1>
  <section class="oi">
     <img src="mog.jpg" alt="oi">
  </section>
+ <div id="divBusca">
+    <input type="text" id="txtBusca" placeholder="Buscar..."/>
+    <img src="search3.png" id="btnBusca" alt="Buscar"/>
+  </div>
     <main>
-        <div id="divBusca">
-            <input type="text" id="txtBusca" placeholder="Buscar..."/>
-            <img src="search3.png" id="btnBusca" alt="Buscar"/>
-          </div>
     <section class="io">
         <img src="mod.jpg" alt="oi">
      </section>
