--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
    <input type="text" id="txtBusca" placeholder="Buscar..."/>
    <img src="search3.png" id="btnBusca" alt="Buscar"/>
  </div>
- <section class="oi">
+ <div id="ca"></div>
     <img src="mog.jpg" alt="oi">
     <main>
+    </div>
+        <div id="oi">
     <section class="io">
         <img src="mod.jpg" alt="oi">
      </section>
+    </div>
     </main>
     <footer>
         contato:********
