--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
    <input type="text" id="txtBusca" placeholder="Buscar..."/>
    <img src="search3.png" id="btnBusca" alt="Buscar"/>
  </div>
-        <div id="ca">   
+ <div id="ca"></div>
+ <section class="oi">
     <img src="mog.jpg" alt="oi">
+</section>
     <main>
     </div>
         <div id="oi">
