--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+z<head>
 <link rel="stylesheet" href="io.java">
 <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -15,15 +15,15 @@
    <input type="text" id="txtBusca" placeholder="Buscar..."/>
    <img src="search3.png" id="btnBusca" alt="Buscar"/>
  </div>
- 
- <section class="oi">
+ <div id="ca"></div>
     <img src="mog.jpg" alt="oi">
-</section>
-<section class="io">
-    <img src="mod.jpg" alt="oi">
- </section>
     <main>
-
+    </div>
+        <div id="oi">
+    <section class="io">
+        <img src="mod.jpg" alt="oi">
+     </section>
+    </div>
     </main>
     <footer>
         contato:********
