--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ z<head>
    <img src="search3.png" id="btnBusca" alt="Buscar"/>
  </div>
  <div id="ca"></div>
+ <section class="oi">
     <img src="mog.jpg" alt="oi">
+</section>
     <main>
     </div>
         <div id="oi">
