--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ z<head>
     <img src="mog.jpg" alt="oi">
 </section>
     <main>
-    <section class="io">
+    <section class="op">
         <img src="mod.jpg" alt="oi">
      </section>
     </div>
