--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ z<head>
 <body>
     <h1>taberna de caça</h1>
  <section class="oi">
+    <style>
     <img src="mog.jpg" alt="oi">
+</style>
 </section>
     <main>
     <section class="op">
