--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ z<head>
 </section>
     <main>
     <section class="op">
+        <style>
         <img src="mod.jpg" alt="oi">
+    </style>
      </section>
     </div>
     </main>
