--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@ z<head>
 <body>
     <h1>taberna de caça</h1>
  <section class="oi">
-    <style>
     <img src="mog.jpg" alt="oi">
-</style>
+    <img src="mod.jpg" alt="oi">
 </section>
     <main>
     <section class="op">
-        <style>
         <img src="mod.jpg" alt="oi">
-    </style>
-     </section>
     </div>
     </main>
     <footer>
