--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@ z<head>
     <h1>taberna de caça</h1>
  <section class="oi">
     <img src="mog.jpg" alt="oi">
-    <img src="mod.jpg" alt="oi">
+        <img src="mod.jpg" alt="oi">
 </section>
+    <main>
+    <section class="op">
+        <img src="mod.jpg" alt="oi">
+    </section>
     </div>
     </main>
     <footer>
