--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ z<head>
 <body>
     <h1>taberna de caça</h1>
  <section class="oi">
+    <img src="mog.jpg" alt="oi">
     <img src="mod.jpg" alt="oi">
 </section>
     <main>
