--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ z<head>
 <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>taberna de caça </title>
+    <title>Cutelaria dos deuses </title>
 </head>
 
 <body>
-    <h1>taberna de caça</h1>
+    <h1>tenperatura do metal </h1>
  <section class="oi">
-    <img src="mog.jpg" alt="oi">
+    <img src="mig.jpg" alt="oi">
     <img src="mod.jpg" alt="oi">
 </section>
     <main>
