--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ z<head>
 
 <body>
     <h1>tenperatura do metal </h1>
- <section class="oi">
+ <section class="tenperatura">
     <img src="mig.jpg" alt="oi">
 </section>
     <main>
