--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ z<head>
 <body>
     <h1>tenperatura do metal </h1>
  <section class="tenperatura">
-    <img src="mig.jpg" alt="oi">
+    <img src="mig.png" alt="oi">
 </section>
     <main>
     </div>
