--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ z<head>
 </head>
 
 <body>
-    <h1>tenperatura do metal </h1>
+    <h1>temperatura do metal </h1>
  <section class="tenperatura">
     <img src="mig.png" alt="oi">
 </section>
